<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.add_story.AddStoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:padding="8dp"
                android:text="@string/use_current_location"
                app:layout_constraintEnd_toEndOf="@+id/preview_image"
                app:layout_constraintStart_toStartOf="@+id/preview_image"
                app:layout_constraintTop_toBottomOf="@+id/preview_image" />

            <ImageView
                android:id="@+id/preview_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/preview"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/placeholder"
                tools:ignore="ImageContrastCheck" />

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_shape"
                android:text="@string/camera"
                android:textColor="#000000"
                app:backgroundTint="#FF5722"
                app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preview_image"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btn_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_shape"
                android:text="@string/gallery"
                android:textColor="#000000"
                app:backgroundTint="#FF5722"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_camera"
                app:layout_constraintTop_toBottomOf="@+id/preview_image"
                tools:ignore="VisualLintButtonSize" />

            <TextView
                android:id="@+id/tv_addDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/btn_camera"
                app:layout_constraintTop_toBottomOf="@+id/btn_camera" />

            <EditText
                android:id="@+id/et_desc"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="@+id/btn_gallery"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/btn_camera"
                app:layout_constraintTop_toBottomOf="@+id/tv_addDesc"
                tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_shape"
                android:text="@string/upload"
                android:textColor="#000000"
                app:backgroundTint="#FF5722"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_desc"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading1.json"
        app:lottie_loop="true" />

</androidx.constraintlayout.widget.ConstraintLayout>